@@ -1,0 +1,50 @@
+﻿########################################################
+# eporner VideoPortal
+########################################################
+start=http://www.eporner.com/0/
+catcher=eporner.com
+########################################################
+# Videos
+########################################################
+item_infos=<span>.<a href="/hd-porn/([\d]+)/.+?" title="free hd porn tube ([^"]+)".+?src="([^"]+)".+?TIME:</span> <font color="#CC0000">([^<]+)<
+item_order=url|title|icon|title.append
+item_info_name=title.append
+item_info_build= (%s)
+item_info_name=type
+item_info_build=video
+item_url_build=%s
+########################################################
+# Categories
+########################################################
+item_infos=<td><a href="(/keywords/[^"]+)"><img src="([^"]+)".+?<center>(.+?)</center>
+item_order=url|icon|title
+item_skill=rss
+item_info_name=title
+item_info_build=video.devil.locale|30100
+item_url_build=http://www.eporner.com%s/0
+########################################################
+# Direct Links
+########################################################
+title=video.devil.locale|30100
+type=once
+icon=video.devil.image|face_kiss.png
+url=http://www.eporner.com/categories/
+########################################################
+# Next
+########################################################
+item_infos=title='free hd porn tube'><span style='color:#FFCC00;'>[\d{1,2}]</span></a> <a href='([^']+)'
+item_order=url
+item_skill=space|lock
+item_info_name=title
+item_info_build=video.devil.locale|30103
+item_info_name=icon
+item_info_build=video.devil.image|next.png
+item_url_build=http://www.eporner.com%s
+########################################################
+# Search
+########################################################
+title=video.devil.locale|30102
+type=search
+icon=video.devil.image|search.png
+url=http://www.eporner.com/keywords/%s
+########################################################
