@@ -1,3 +1,10 @@
+[B]Version 1.6.8[/B]
+
+- Updated: tube8, moviesand, keezmovies
+- Added: girlfriendvideos and eporner (thx tiben20)
+- Added: readded mofosex
+
+
 [B]Version 1.6.7[/B]
 
 - Updated: cookies are saved to the userdata profile path now
